# gilvanvmj-mlops-icev

./: .dockerignore  .gitignore  CONTRIBUTORS.md  Dockerfile  Makefile  README.md  ROTEIRO.md  Slides_Domingo.pptx  Slides_Sabado.pptx  app.py  docker-compose.yml  dvc.yaml  mlflow.db  pyproject.toml
.github/workflows/: ci.yml  contributors.yml
data/: wine.parquet.dvc
data/processed/: .gitignore
mlartifacts/1/models/m-0a7b76ae0ddd4d359f59050fcb76936d/artifacts/: MLmodel
mlartifacts/1/models/m-134d7c4e1bf24fbeb4c13e8c104a6f1e/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-2e47a41de75b45f8bcdba565ca527929/artifacts/: MLmodel  requirements.txt
mlartifacts/1/models/m-35dde22486ef4b02a4db425d101d081c/artifacts/: MLmodel  conda.yaml  model.pkl
mlartifacts/1/models/m-5ba69f6ed9594cd2a2c4d9091c4fd7e8/artifacts/: MLmodel  (+2 more)
notebooks/: 01_mlflow_explore.ipynb
scripts_linux/: 00_setup.sh  01_repo.sh  02_bootstrap_uv.sh  03_data_dvc.sh  04_pipeline_data.sh  05_mlflow_server.sh  06_train.sh  07_promote.sh  08_serve.sh  09_test_predict.sh  10_docker.sh  11_ci_local.sh  12_compose_up.sh  13_drift_report.sh  14_evaluate.sh  README.md  start.sh
scripts_windows/: 00_setup.ps1  01_repo.ps1  02_bootstrap_uv.ps1  03_data_dvc.ps1  04_pipeline_data.ps1  05_mlflow_server.ps1  06_train.ps1  07_promote.ps1  08_serve.ps1  09_test_predict.ps1  10_docker.ps1  11_ci_local.ps1  12_compose_up.ps1  13_drift_report.ps1  14_evaluate.ps1  README.md  start.ps1
src/: data.py  evaluate.py  monitor.py  promote.py  train.py
src/api/: main.py
tests/: test_api.py  test_data.py
(+10 files in other folders)
