[project]
name = "gilvanvmj-mlops-icev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.67.1",
    "fastapi>=0.136.3",
    "mlflow>=3.12.0",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
